--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.11.3"
   },
   "name": "notscrapyet",
   "version": "1.0.0",
