--- a/deployment/prod/deployment.yaml
+++ b/deployment/prod/deployment.yaml
@@ -89,7 +89,7 @@ spec:
       spec:
          containers:
             - name: notscrapyet
-              image: localhost:5000/notscrapyet:0001.0001
+              image: localhost:5000/notscrapyet
               imagePullPolicy: Always
 
 ---
