--- a/deployment/prod/deployment.yaml
+++ b/deployment/prod/deployment.yaml
@@ -111,7 +111,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
-    cert-manager.io/clusterissuer: letsencrypt-prod
+    cert-manager.io/cluster-issuer: letsencrypt-prod
     kubernetes.io/ingress.class: "nginx"    
     nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
   name: notscrapyet
