--- a/app/package.json
+++ b/app/package.json
@@ -1,16 +1,8 @@
 {
   "dependencies": {
-    "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "pg": "^8.11.3"
-  },
-  "name": "notscrapyet",
-  "version": "1.0.0",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": ""
+    "ejs": "^3.1.10",
+    "express": "^4.19.2",
+    "mongodb": "^6.8.1",
+    "nodemon": "^3.1.4"
+  }
 }
